<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#1a1a1c"
    tools:context=".More">
    <RelativeLayout
        android:layout_margin="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:src="@drawable/ic_baseline_keyboard_arrow_left_24"
            />
        <TextView
            android:id="@+id/tvMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more"
            android:textStyle="bold"
            android:textSize="@dimen/sp_25"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            />

    </RelativeLayout>
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/user_name_bg"
      android:layout_margin="@dimen/dp_10"
      >
      <View
          android:padding="@dimen/dp_20"
          android:layout_margin="@dimen/dp_10"
          android:id="@+id/profile_icon_view"
          android:layout_width="@dimen/dp_70"
          android:layout_height="@dimen/dp_70"
          android:background="@drawable/profile_icon"/>
      <TextView
          android:id="@+id/tvUserName"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text=" User Name"
          android:textColor="@color/white"
          android:layout_toRightOf="@id/profile_icon_view"
          android:textSize="@dimen/sp_16"
          android:layout_marginLeft="@dimen/dp_20"
          android:layout_marginTop="@dimen/dp_20"
          />
      <TextView
          android:id="@+id/tvUserEmail"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="user email"
          android:textSize="@dimen/sp_16"
          android:textColor="@color/white"
          android:layout_toRightOf="@id/profile_icon_view"
          android:layout_marginLeft="@dimen/dp_20"
          android:layout_below="@+id/tvUserName"

          />

  </RelativeLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        app:cardBackgroundColor="#130606"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_10"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" Jio Recharge"
                android:textSize="@dimen/sp_20"
                android:textColor="@color/white"
                android:drawablePadding="@dimen/dp_30"
                android:gravity="center"
                android:drawableLeft="@drawable/ic_baseline_attach_money_24"

                />
            <ImageView

                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/sp_16"
                android:gravity="center"

                />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_5"
        app:cardBackgroundColor="#130606"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_10"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eros_now"
                android:drawablePadding="@dimen/dp_30"
                android:textSize="@dimen/sp_20"
                android:textColor="@color/white"
                android:gravity="center"
                android:drawableLeft="@drawable/ic_baseline_all_inclusive_24"

                />
            <ImageView

                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/sp_16"
                android:gravity="center"

                />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_5"
        app:cardBackgroundColor="#130606"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_10"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sun_next"
                android:drawablePadding="@dimen/dp_30"
                android:textSize="@dimen/sp_20"
                android:textColor="@color/white"
                android:gravity="center"
                android:drawableLeft="@drawable/ic_baseline_queue_play_next_24"

                />
            <ImageView

                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/sp_16"
                android:gravity="center"

                />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_5"
        app:cardBackgroundColor="#130606"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_10"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_list"
                android:textSize="@dimen/sp_20"
                android:textColor="@color/white"
                android:drawablePadding="@dimen/dp_30"
                android:gravity="center"
                android:drawableLeft="@drawable/ic_baseline_playlist_add_24"

                />
            <ImageView

                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/sp_16"
                android:gravity="center"

                />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_5"
        app:cardBackgroundColor="#130606"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_10"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/available_for_download"
                android:textSize="@dimen/sp_20"
                android:drawablePadding="@dimen/dp_30"
                android:textColor="@color/white"
                android:gravity="center"
                android:drawableLeft="@drawable/ic_baseline_arrow_downward_24"

                />
            <ImageView

                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/sp_16"
                android:gravity="center"

                />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_5"
        app:cardBackgroundColor="#130606"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_5"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_downloads"
                android:textSize="@dimen/sp_20"
                android:textColor="@color/white"
                android:drawablePadding="@dimen/dp_30"
                android:gravity="center"
                android:drawableLeft="@drawable/ic_baseline_arrow_downward_24"

                />
            <ImageView

                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/sp_16"
                android:gravity="center"

                />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_5"
        app:cardBackgroundColor="#130606"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_10"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/languages"
                android:textSize="@dimen/sp_20"
                android:drawablePadding="@dimen/dp_30"
                android:textColor="@color/white"
                android:gravity="center"
                android:drawableLeft="@drawable/ic_baseline_language_24"

                />
            <ImageView

                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/sp_16"
                android:gravity="center"

                />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_5"
        app:cardBackgroundColor="#130606"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_10"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genres"
                android:textSize="@dimen/sp_20"
                android:drawablePadding="@dimen/dp_30"
                android:textColor="@color/white"
                android:gravity="center"
                android:drawableLeft="@drawable/ic_baseline_mood_24"

                />
            <ImageView

                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/sp_16"
                android:gravity="center"

                />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_5"
        app:cardBackgroundColor="#130606"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_10"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback"
                android:textSize="@dimen/sp_20"
                android:textColor="@color/white"
                android:drawablePadding="@dimen/dp_30"
                android:gravity="center"
                android:drawableLeft="@drawable/ic_baseline_feedback_24"

                />
            <ImageView

                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/sp_16"
                android:gravity="center"

                />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_5"
        app:cardBackgroundColor="#130606"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_10"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting"
                android:textSize="@dimen/sp_20"
                android:textColor="@color/white"
                android:drawablePadding="@dimen/dp_30"
                android:gravity="center"
                android:drawableLeft="@drawable/ic_baseline_settings_24"

                />
            <ImageView

                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/sp_16"
                android:gravity="center"

                />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_5"
        app:cardBackgroundColor="#130606"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_10"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/support"
                android:textSize="@dimen/sp_20"
                android:drawablePadding="@dimen/dp_30"
                android:textColor="@color/white"
                android:gravity="center"
                android:drawableLeft="@drawable/ic_baseline_contact_support_24"

                />
            <ImageView

                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/sp_16"
                android:gravity="center"

                />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/logOutCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_5"
        app:cardBackgroundColor="#130606"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_10"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_out"
                android:textSize="@dimen/sp_20"
                android:drawablePadding="@dimen/dp_30"
                android:textColor="@color/white"
                android:drawableLeft="@drawable/ic_baseline_power_settings_new_24"
                />
            <ImageView
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/sp_16"

                />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>




</LinearLayout>